Kubernetes/NetworkPolicy/np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: prod-app
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - to:                           
      - podSelector:
          matchLabels:
            app: backend
      ports:                       
      - protocol: TCP
        port: 3306

    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
